# search_engine

./: .gitignore  CMakeLists.txt  README.md
config/: requests.json
include/: converter_json.h  my_exceptions.h  search_server.h
output/: answers.json
src/: converter_json.cpp  converter_json.h  inverted_index.cpp  inverted_index.h  main.cpp  search_server.cpp
tests/: CMakeLists.txt  test.cpp
